Bug 102293 - triple click on word in impress results in visually unselected word
Summary: triple click on word in impress results in visually unselected word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.1.5.1 rc
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-19 16:27 UTC by Caolán McNamara
Modified: 2016-09-22 12:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (1.95 MB, application/vnd.oasis.opendocument.presentation)
2016-09-19 16:29 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2016-09-19 16:27:57 UTC
but it really is selected.
Comment 1 Caolán McNamara 2016-09-19 16:29:02 UTC
This is trigged by the fix of bug 97075, specifically...

commit 16c7f8916661df24f4681ec82f6bd4d7ad85d141
Date:   Tue Jan 12 16:36:49 2016 +0000

    tdf#97075 - don't render sdr overlays before we paint.
Comment 2 Caolán McNamara 2016-09-19 16:29:32 UTC
Created attachment 127437 [details]
sample document
Comment 3 Michael Meeks 2016-09-19 17:15:11 UTC
Curious indeed; Andras was looking at a set of selection issues recently, that may be related - although bisecting to there is unlikely to be related ... any thoughts Andras ?
Comment 4 Commit Notification 2016-09-19 20:24:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38a61ddaf63768ebe19c92d561eac6f50d67ded7

Resolves: tdf#102293 triple click results in visually unselected word

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-09-19 20:31:53 UTC
This'll do for now I guess unless a better idea shows up
Comment 6 Commit Notification 2016-09-22 12:16:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=970750df0ddf272f5b22555834e579d56313e579&h=libreoffice-5-2

Resolves: tdf#102293 triple click results in visually unselected word

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.