Resolves: tdf#102293 triple click results in visually unselected word

in previously unselected textboxes in impress

started happening after...

commit 16c7f8916661df24f4681ec82f6bd4d7ad85d141
Date:   Tue Jan 12 16:36:49 2016 +0000

    tdf#97075 - don't render sdr overlays before we paint

in impress instead flush the overlay after activating the edit object
if we go on to put the cursor in there. Seems to work.

Change-Id: Ib746c36d1074aee09771a3dc1d69834ce80a9c08
(cherry picked from commit 38a61ddaf63768ebe19c92d561eac6f50d67ded7)
Reviewed-on: https://gerrit.libreoffice.org/29040
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>